# shannon-cli

./: .gitignore  Makefile  pyproject.toml
shannon_cli/: cli.py  config.py  utils.py
shannon_cli/crypto_providers/: binance.py
shannon_cli/strategies/: dca_strategy.py  interfaces.py
