[tool.poetry]
name = "shannon-cli"
version = "0.1.0"
description = ""
authors = ["Juan Gaitán-Villamizar <juans.gaitan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
python-binance = "^1.0.19"
pydantic = "^2.7.1"
pandas-ta = "^0.3.14b0"
pyarrow = "^16.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
shannon = "shannon_cli.cli:main"